--- a/packages/renderer/src/index.css
+++ b/packages/renderer/src/index.css
@@ -31,6 +31,9 @@
          font-style: normal;
          }
 html, body {
+  --tw-bg-opacity: 1;
+    background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+
     width: 100%;
     height: 100%;
     margin: 0;
